--- a/app/src/main/res/layout/item_dog.xml
+++ b/app/src/main/res/layout/item_dog.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="125dp"
+    android:id="@+id/dogLayout"
     android:orientation="horizontal">
 
     <ImageView
