--- a/app/src/main/res/layout/item_dog.xml
+++ b/app/src/main/res/layout/item_dog.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="dog"
+            type="georgia.com.dogapp.model.DogBreed" />
+        
+    </data>
+    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="125dp"
     android:id="@+id/dogLayout"
@@ -12,6 +17,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
+        android:imageUrl="@{dog.imageUrl}"
         android:src="@mipmap/ic_launcher"
         android:padding="4dp"/>
     <LinearLayout
@@ -27,14 +33,15 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             style="@style/Title"
-            android:text="Dog name"/>
+            android:text="@{dog.dogBreed}"/>
 
         <TextView
             android:id="@+id/lifespan"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             style="@style/Text"
-            android:text="Dog Life Span"/>
+            android:text="@{dog.lifeSpan}"/>
     </LinearLayout>
 
 </LinearLayout>
+</layout>
