--- a/app/src/main/res/layout/item_dog.xml
+++ b/app/src/main/res/layout/item_dog.xml
@@ -1,47 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
+
         <variable
             name="dog"
             type="georgia.com.dogapp.model.DogBreed" />
-        
+
+        <variable
+            name="listener"
+            type="georgia.com.dogapp.view.DogClickListerner" />
+
     </data>
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="125dp"
-    android:id="@+id/dogLayout"
-    android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:imageUrl="@{dog.imageUrl}"
-        android:src="@mipmap/ic_launcher"
-        android:padding="4dp"/>
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:padding="4dp">
+        android:id="@+id/dogLayout"
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        android:onClick="@{listener::onDogClicked}"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/name"
-            android:layout_height="wrap_content"
+            android:id="@+id/dogId"
             android:layout_width="wrap_content"
-            style="@style/Title"
-            android:text="@{dog.dogBreed}"/>
+            android:layout_height="wrap_content"
+            android:text="@{String.valueOf(dog.uuid)}"
+            android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/lifespan"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            style="@style/Text"
-            android:text="@{dog.lifeSpan}"/>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:imageUrl="@{dog.imageUrl}"
+            android:padding="4dp"
+            android:src="@mipmap/ic_launcher" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+            <TextView
+                android:id="@+id/name"
+                style="@style/Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{dog.dogBreed}" />
+
+            <TextView
+                android:id="@+id/lifespan"
+                style="@style/Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{dog.lifeSpan}" />
+        </LinearLayout>
+
     </LinearLayout>
-
-</LinearLayout>
 </layout>
