--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="dog"
+            type="georgia.com.dogapp.model.DogBreed" />
+    </data>
+    
+<RelativeLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,13 +19,14 @@
         android:layout_height="200dp"
         android:scaleType="fitCenter"
         android:src="@mipmap/ic_launcher"
+        android:imageUrl="@{dog.imageUrl}"
         android:layout_alignParentTop="true"/>
 
     <TextView
         android:id="@+id/dogName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dog Name"
+        android:text="@{dog.dogBreed}"
         android:layout_margin="4dp"
         android:layout_below="@+id/dogImage"
         android:layout_centerHorizontal="true"
@@ -30,7 +37,7 @@
         android:id="@+id/dogPurpose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dog Purpose"
+        android:text="@{dog.bredFor}"
         android:layout_margin="4dp"
         android:layout_below="@+id/dogName"
         android:layout_centerHorizontal="true"
@@ -39,7 +46,7 @@
         android:id="@+id/dogTemperament"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dog Temperament"
+        android:text="@{dog.temperament}"
         android:layout_margin="4dp"
         android:layout_below="@+id/dogPurpose"
         android:layout_centerHorizontal="true"
@@ -48,10 +55,11 @@
         android:id="@+id/dogLifeSpan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dog LifeSpan"
+        android:text="@{dog.lifeSpan}"
         android:layout_margin="4dp"
         android:layout_below="@+id/dogTemperament"
         android:layout_centerHorizontal="true"
         style="@style/Text"/>
 
 </RelativeLayout>
+</layout>
