--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -5,14 +5,14 @@
         android:title="Send Sms"
         android:id="@+id/action_send_sms"
         android:icon="@drawable/ic_send_black_24dp"
-        app:showAsAction="ifRoom">
+        app:showAsAction="never|withText">
 
     </item>
     <item
         android:title="Share"
-        android:id="@id/action_send_sms"
+        android:id="@+id/action_share"
         android:icon="@drawable/ic_share_black_24dp"
-        app:showAsAction="ifRoom">
+        app:showAsAction="never|withText">
 
     </item>
 </menu>
